# my_projects

./: .gitignore  3_sh_create_pyenv  README.md
math_tables_py/: expected_ouput  pyproject.toml  setup.py
math_tables_py/tests/: test_train.py
math_tables_py/train/: __init__.py  __main__.py  logic.py
